# zero_zero

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  build.ps1  shader_debug_env.cmd
cmake/: compile_options.cmake  compressonator.cmake  jolt.cmake  libraries.cmake  shaders.cmake  std.cmake
docs/: DoxyPressApp.json  Doxyfile  DoxygenLayout.xml  conf.py  custom.css  doxypress.json  index.rst  mainpage.dox  mainpage.md
docs/html/: annotated.html  classes.html  classz0_1_1Application-members.html  classz0_1_1Application.html  classz0_1_1BoxShape-members.html  classz0_1_1BoxShape.html  classz0_1_1Camera-members.html  classz0_1_1Camera.html  classz0_1_1Character-members.html  classz0_1_1Character.html  classz0_1_1CollisionArea-members.html  classz0_1_1CollisionArea.html  classz0_1_1CollisionObject-members.html  classz0_1_1CollisionObject.html  classz0_1_1ConvexHullShape-members.html  classz0_1_1ConvexHullShape.html  classz0_1_1Cubemap-members.html  classz0_1_1Cubemap.html  classz0_1_1DirectionalLight-members.html  classz0_1_1DirectionalLight.html  classz0_1_1Environment-members.html  classz0_1_1Environment.html  classz0_1_1EnvironmentCubemap-members.html  classz0_1_1EnvironmentCubemap.html  classz0_1_1Font-members.html  classz0_1_1Font.html  classz0_1_1GBox-members.html  classz0_1_1GBox.html  classz0_1_1GButton-members.html  classz0_1_1GButton.html  classz0_1_1GCheckWidget-members.html  classz0_1_1GCheckWidget.html  classz0_1_1GFrame-members.html  classz0_1_1GFrame.html  classz0_1_1GLine-members.html  classz0_1_1GLine.html  classz0_1_1GManager-members.html  classz0_1_1GManager.html  classz0_1_1GPanel-members.html  classz0_1_1GPanel.html  (+155 more)
examples/src/: add_remove_child.cpp  add_remove_child.h  example.cpp  example.h  menu.cpp  menu.h  physics.cpp  player.cpp  topbar.cpp  topbar.h  triangle.cpp  ui.cpp
examples/src/shaders/: uv_gradient.frag
include/: stb_image.h
include/z0/: application.h  application_config.h  base.h  buffer.h  color.h  constants.h  descriptors.h  device.h  input.h  input_event.h  jolt.h  libraries.h  loader.h  macros.h  modules.h  object.h  physics.h  rect.h  shader.h  signal.h  stats.h  tools.h  tween.h  type_registry.h  vulkan.h  window.h  z0.h
include/z0/framebuffers/: base_frame_buffer.h  color_frame_buffer.h  color_frame_buffer_hdr.h  depth_frame_buffer.h  frame_buffer.h  sampled_frame_buffer.h  shadow_map_frame_buffer.h
include/z0/gui/: gbox.h  gbutton.h  gcheck_widget.h  gevent.h  gframe.h  glayout.h  glayout_vector.h  glayout_vector_resource.h  gline.h  gmanager.h  gpanel.h  grect.h  gresource.h  gresource_vector.h  gscroll_bar.h  gstyle.h  gstyle_classic.h  gstyle_classic_resource.h  gtext.h  gtextedit.h  gtoggle_button.h  gtree_view.h  gvalue_select.h  gwidget.h  gwindow.h
include/z0/nodes/: camera.h  character.h  collision_area.h  collision_node.h  collision_object.h  directional_light.h  environment.h  kinematic_body.h  label.h  light.h  mesh_instance.h  node.h  omni_light.h  physics_body.h  physics_node.h  raycast.h  rigid_body.h  skybox.h  spot_light.h  static_body.h  viewport.h
include/z0/renderers/: base_models_renderer.h  base_postprocessing_renderer.h  base_renderer.h  base_renderpass.h  font_renderer.h  models_renderer.h  postprocessing_renderer.h  renderer.h  renderpass.h  scene_renderer.h  shadowmap_renderer.h  simple_postprocessing_renderer.h  skybox_renderer.h  vector_renderer.h
include/z0/resources/: convex_hull_shape.h  cubemap.h  font.h  image.h  material.h  mesh.h  mesh_shape.h  resource.h  shape.h  static_compound_shape.h  sub_shape.h  texture.h
src/: libraries.cpp
src/examples/: add_remove_child.cpp  add_remove_child.h  crate.cpp  crate.h  example.cpp  exemple_1.cpp  physics.cpp  physics.h  player.cpp  player.h  topbar.cpp  topbar.h  triangle.cpp  triangle.h  ui.cpp  ui.h
src/examples/shaders/: uv_gradient.frag
src/tools/: application.cppm
src/tools/blender/: blender_zero_zero.py
src/tools/genatlas/: genatlas.cpp
src/tools/glb2zscene/: glb2zscene.cpp
src/tools/gltf2json/: gltf2json.cpp
src/tools/gltf2zres/: converter.cpp  converter.cppm  gltf2zres.cpp  gltl2zres.cpp  image.cpp  image.cppm  main.cpp  miplevel.cppm
src/tools/gltf2zscene/: converter.cpp  converter.cppm  gltf2zscene.cpp  image.cpp  image.cppm  main.cpp  miplevel.cppm
src/tools/image_encode/: image_encode.cpp
src/z0/: aabb.cpp  aabb.cppm  application.cpp  application.cppm  application_config.cppm  buffer.cpp  buffer.cppm  color.cppm  constants.cpp  constants.cppm  debug_config.cppm  descriptors.cpp  descriptors.cppm  device.cpp  device.cppm  frustum_culling.cpp  frustum_culling.cppm  gltf.cpp  gltf.cppm  input.cpp  input.cppm  input_event.cpp  input_event.cppm  libraries.cpp  loader.cpp  loader.cppm  locale.cpp  locale.cppm  log.cpp  log.cppm  mappings.h  object.cpp  object.cppm  physics.cpp  physics.cppm  rect.cpp  rect.cppm  shader.cpp  shader.cppm  signal.cpp  (+16 more)
src/z0/framebuffers/: base_frame_buffer.cpp  color_frame_buffer.cpp  color_frame_buffer.cppm  color_frame_buffer_hdr.cpp  color_frame_buffer_hdr.cppm  depth.cpp  depth_frame_buffer.cpp  depth_frame_buffer.cppm  frame_buffer.cpp  frame_buffer.cppm  sampled_frame_buffer.cpp  sampled_frame_buffer.cppm  shadow_map_frame_buffer.cpp  shadow_map_frame_buffer.cppm  shadowmap.cppm
src/z0/gui/: color.cppm  gbox.cpp  gbox.cppm  gbutton.cpp  gbutton.cppm  gcheck_widget.cpp  gcheck_widget.cppm  gevent.cpp  gevent.cppm  gframe.cpp  gframe.cppm  glayout.cpp  glayout_vector.cpp  glayout_vector_resource.cpp  gline.cpp  gline.cppm  gmanager.cpp  gmanager.cppm  gpanel.cppm  grect.cpp  gresource.cppm  gresource_vector.cpp  gscroll_bar.cpp  gscroll_bar.cppm  gstyle.cpp  gstyle.cppm  gstyle_classic.cpp  gstyle_classic.cppm  gstyle_classic.h  gstyle_classic_resource.cpp  gstyle_classic_resource.cppm  gstyle_classic_resource.h  gtext.cpp  gtext.cppm  gtext_edit.cppm  gtextedit.cpp  gtoggle_button.cpp  gtoggle_button.cppm  gtree_view.cpp  gtree_view.cppm  (+7 more)
src/z0/nodes/: animation_player.cpp  animation_player.cppm  camera.cpp  camera.cppm  character.cpp  character.cppm  (+35 more)
(+254 files in other folders)
